nav,quotes,action and footer area designed

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,10 +15,10 @@
         <div class="left"><h2>TRAVEL</h2>
         </div>
         <ul>
-        <li><a href="#"><h3>Home</h3></a></li>
-        <li><a href="#"><h3>About</h3></a>
-        <li><a href="#"><h3>Services</h3></a></li>
-        <li><a href="#"><h3>Contact us</h3></a></li>
+        <li><a href="#"><h3>DESTINATION</h3></a></li>
+        <li><a href="#"><h3>ABOUT</h3></a>
+        <li><a href="#"><h3>SERVICES</h3></a></li>
+        <li><a href="#"><h3>CONTACT US</h3></a></li>
         </ul>
         </div>
     </header>
@@ -56,15 +57,15 @@
          </div>
          </section>
          <section class="quotes-area">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero iste asperiores provident maxime voluptatem, id quasi. Consequuntur, animi odio quisquam recusandae enim voluptatibus architecto! Velit qui facilis ad hic inventore temporibus nam possimus, fugiat saepe alias dolorum repudiandae, cupiditate labore perferendis culpa ducimus voluptatibus.</p>
-        <h4>-Thor,God of Thumber</h4>
+        <p><strong>“Travel is  fatal to prejudice, bigotry, and narrow mindedness, and many of our people need it sorely on these accounts.” </strong></p>
+        <h4>~ Mark Twain</h4>
         </section>
     <section class="call-in">
         <section class="connect-with-us">
       
             <div class="action-area">
             <h3>call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <p>Sign up travelling clicking that button right over there!</p>
             </div>
             <div class="action-button">
             <button class="Sign-up">Sign up</button>
@@ -75,6 +76,6 @@
     <footer>
         <p>All Right Reserved by<a href="#">Team TST</a></p>
     </footer>
-    </
+
 </body>
 </html>
